================================================================================
Change history for glaciers
================================================================================

DESIGN ISSUES (user interface):
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- add 3rd dimension to Debris model
- add 3rd dimension to DebrisNode
- increase zoom on vertical axis by 2x
- add moving glyphs to ice surface to show motion
- refactor model listener class hierarchy

MEDIUM PRIORITY:
- borehole drill's position doesn't line up with tip of drill image
- visual representation of snowfall
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- extruded portion of ice jiggles at headwall while it's evolving
- remove yaw from mountains image perspective
- add Advanced panel
- implement Save/Load feature
- close & reopen graph windows when switching modules
- add button to show a picture of a real glacier
- make mercury in thermometers move as temperature changes
- main control panel should be the same height in all modules
- PlayArea class is too big, refactor
- AbstractModel class is too big, refactor

LOW PRIORITY:
- right edge of ice thickness tool icon is clipped (see Unfuddle #558)
- make flags fall over (with somewhat random orientation?) when they hit the valley floor
- remove registration points from mountains image
- creating a tool and dragging it straight to the trash doesn't work because we're in the middle of an event sequence
- developer controls for ice velocity "look"?
- make mountains image big enough so that all we see is sky when the birds-eye view is made very wide
- generalize all charts, there's too much duplicated code (ditto in controller that wires control panel to charts)
- cleanup duplicate boilerplate code in ToolboxNode constructor