@@ -8,6 +8,7 @@ import java.awt.geom.Ellipse2D;
 import java.awt.geom.Point2D;
 
 import edu.colorado.phet.glaciers.model.Debris;
+import edu.colorado.phet.glaciers.model.Glacier;
 import edu.colorado.phet.glaciers.model.Debris.DebrisAdapter;
 import edu.colorado.phet.glaciers.model.Debris.DebrisListener;
 import edu.umd.cs.piccolo.nodes.PPath;
@@ -24,13 +25,17 @@ public class DebrisNode extends PComposite {
     // Class data
     //----------------------------------------------------------------------------
     
+    private static final boolean DEBUG_3D = false;
+    
     private static final double BOULDER_RADIUS = 1; // pixels
+    private static final double BUCKET_WIDTH = 40; // meters
     
     //----------------------------------------------------------------------------
     // Instance data
     //----------------------------------------------------------------------------
     
     private final Debris _debris;
+    private final Glacier _glacier;
     private final DebrisListener _debrisListener;
     private final ModelViewTransform _mvt;
     private final Point2D _pModel, _pView;
@@ -39,10 +44,11 @@ public class DebrisNode extends PComposite {
     // Constructors
     //----------------------------------------------------------------------------
     
-    public DebrisNode( Debris debris, ModelViewTransform mvt ) {
+    public DebrisNode( Debris debris, Glacier glacier, ModelViewTransform mvt ) {
         super();
         
         _debris = debris;
+        _glacier = glacier;
         _mvt = mvt;
         
         _debrisListener = new DebrisAdapter() {
@@ -54,6 +60,15 @@ public class DebrisNode extends PComposite {
         
         BoulderNode boulderNode = new BoulderNode( BOULDER_RADIUS );
         addChild( boulderNode );
+        
+        if ( DEBUG_3D ) {
+            if ( _debris.getZ() >= BUCKET_WIDTH ) {
+                boulderNode.setPaint( Color.RED );
+            }
+        }
+        else {
+            setVisible( _debris.getZ() < BUCKET_WIDTH );
+        }
         
         _pModel = new Point2D.Double();
         _pView = new Point2D.Double();
@@ -69,7 +84,18 @@ public class DebrisNode extends PComposite {
     //----------------------------------------------------------------------------
     
     private void updatePosition() {
-        _pModel.setLocation( _debris.getX(), _debris.getY() );
+        
+        final double surfaceElevation = _glacier.getSurfaceElevation( _debris.getX() );
+        if ( _debris.getY() < surfaceElevation ) {
+            _pModel.setLocation( _debris.getX(), _debris.getY() );
+            if ( !DEBUG_3D ) {
+                setVisible( _debris.getZ() == 0 );
+            }
+        }
+        else {
+            _pModel.setLocation( _debris.getX(), _debris.getY() + _debris.getZ() );
+            setVisible( true );
+        }
         _mvt.modelToView( _pModel, _pView );
         setOffset( _pView );
     }
